<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_page2"
    android:background="@color/white">
    <View
        android:onClick="back"
        android:id="@+id/icons_navig"
        android:layout_width="24dp"
        android:layout_height="20.87dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/baseline_arrow_back_24"/>
    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="18dp"
        android:text="@string/page_title"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/code_has_be"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="@string/code_has_be"
        android:textSize="14sp"
        android:textColor="@color/black"/>
    <com.chaos.view.PinView
        android:id="@+id/pinview"
        app:itemCount="6"
        app:itemWidth="50dp"
        app:itemHeight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:itemBackground="@color/gray"
        android:layout_gravity="center"
        android:layout_below="@id/code_has_be"
        android:inputType="number"
        android:textColor="@color/black"
        android:cursorVisible="true"
        app:hideLineWhenFilled="false"
        app:itemRadius="10dp" />
    <TextView
        android:id="@+id/resend_code"
        android:layout_below="@id/pinview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/resend_code"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/show_otp"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_below="@id/resend_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:backgroundTint="#5F7752"
        android:text="@string/show"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"/>
</RelativeLayout>